[package]
name = "astrors"
version = "0.0.1"

authors = ["Pedro Cabral <pedro@cabral.mat.br>"]
keywords = ["astrors", "astronomy", "astrophysics", "rust"]

description = "Astronomy and astrophysics crate for computing with Rust."

documentation = "https://docs.rs/astrors"

license = "MIT OR Apache-2.0"

readme = "README.md"

edition = "2018"

[dependencies]
